# GitResumeWebServiceAPI

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
git_resume/: app.py  handler.py
git_resume/api/: api.py
git_resume/config/: config.py
git_resume/models/: cont.py  redis.py
