[tool.poetry]
name = "GitResumeWebServiceAPI"
version = "0.1.0"
description = "Webservice responsible for centralizing the GitResume structure's requests"
authors = ["Pablo Emidio <p.emidiodev@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
nameko = "^2.14.1"
fastapi = "^0.79.0"
pre-commit = "^2.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
